metadata/objects/graxaccountindex__x.object
<CustomObject>
    <description>graxaccountindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxaccountindex</externalName>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <description>AccountNumber</description>
        <externalDeveloperName>AccountNumber</externalDeveloperName>
        <label>AccountNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <description>AccountSource</description>
        <externalDeveloperName>AccountSource</externalDeveloperName>
        <label>AccountSource</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Date_Field_c__c</fullName>
        <description>Account_Date_Field__c</description>
        <externalDeveloperName>Account_Date_Field__c</externalDeveloperName>
        <label>Account_Date_Field__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Location_c__c</fullName>
        <description>Account_Location__c</description>
        <externalDeveloperName>Account_Location__c</externalDeveloperName>
        <label>Account_Location__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Priority_c__c</fullName>
        <description>Account_Priority__c</description>
        <externalDeveloperName>Account_Priority__c</externalDeveloperName>
        <label>Account_Priority__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source_Custom_c__c</fullName>
        <description>Account_Source_Custom__c</description>
        <externalDeveloperName>Account_Source_Custom__c</externalDeveloperName>
        <label>Account_Source_Custom__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status_c__c</fullName>
        <description>Account_Status__c</description>
        <externalDeveloperName>Account_Status__c</externalDeveloperName>
        <label>Account_Status__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveLiveAgentUser_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ActiveLiveAgentUser__pc</description>
        <externalDeveloperName>ActiveLiveAgentUser__pc</externalDeveloperName>
        <label>ActiveLiveAgentUser__pc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_c__c</fullName>
        <description>Active__c</description>
        <externalDeveloperName>Active__c</externalDeveloperName>
        <label>Active__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator_partner_pc__c</fullName>
        <description>Activity_Indicator_partner__pc</description>
        <externalDeveloperName>Activity_Indicator_partner__pc</externalDeveloperName>
        <label>Activity_Indicator_partner__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator_pc__c</fullName>
        <description>Activity_Indicator__pc</description>
        <externalDeveloperName>Activity_Indicator__pc</externalDeveloperName>
        <label>Activity_Indicator__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <description>AnnualRevenue</description>
        <externalDeveloperName>AnnualRevenue</externalDeveloperName>
        <label>AnnualRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Income_c__c</fullName>
        <description>Annual_Income__c</description>
        <externalDeveloperName>Annual_Income__c</externalDeveloperName>
        <label>Annual_Income__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Date_c__c</fullName>
        <description>Application_Date__c</description>
        <externalDeveloperName>Application_Date__c</externalDeveloperName>
        <label>Application_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <description>BillingAddress</description>
        <externalDeveloperName>BillingAddress</externalDeveloperName>
        <label>BillingAddress</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingBillingLatitude__c</fullName>
        <description>BillingBillingLatitude</description>
        <externalDeveloperName>BillingBillingLatitude</externalDeveloperName>
        <label>BillingBillingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingBillingLongitude__c</fullName>
        <description>BillingBillingLongitude</description>
        <externalDeveloperName>BillingBillingLongitude</externalDeveloperName>
        <label>BillingBillingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <description>BillingCity</description>
        <externalDeveloperName>BillingCity</externalDeveloperName>
        <label>BillingCity</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <description>BillingCountry</description>
        <externalDeveloperName>BillingCountry</externalDeveloperName>
        <label>BillingCountry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <description>BillingGeocodeAccuracy</description>
        <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
        <label>BillingGeocodeAccuracy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <description>BillingLatitude</description>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>BillingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <description>BillingLongitude</description>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>BillingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <description>BillingPostalCode</description>
        <externalDeveloperName>BillingPostalCode</externalDeveloperName>
        <label>BillingPostalCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalState__c</fullName>
        <description>BillingPostalState</description>
        <externalDeveloperName>BillingPostalState</externalDeveloperName>
        <label>BillingPostalState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <description>BillingState</description>
        <externalDeveloperName>BillingState</externalDeveloperName>
        <label>BillingState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <description>BillingStreet</description>
        <externalDeveloperName>BillingStreet</externalDeveloperName>
        <label>BillingStreet</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Complete_c__c</fullName>
        <description>Billing_Address_Complete__c</description>
        <externalDeveloperName>Billing_Address_Complete__c</externalDeveloperName>
        <label>Billing_Address_Complete__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Family_Members_Data_c__c</fullName>
        <description>Business_Family_Members_Data__c</description>
        <externalDeveloperName>Business_Family_Members_Data__c</externalDeveloperName>
        <label>Business_Family_Members_Data__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buying_Relationship_c__c</fullName>
        <description>Buying_Relationship__c</description>
        <externalDeveloperName>Buying_Relationship__c</externalDeveloperName>
        <label>Buying_Relationship__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Level_pc__c</fullName>
        <description>Certification_Level__pc</description>
        <externalDeveloperName>Certification_Level__pc</externalDeveloperName>
        <label>Certification_Level__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelProgramLevelName__c</fullName>
        <description>ChannelProgramLevelName</description>
        <externalDeveloperName>ChannelProgramLevelName</externalDeveloperName>
        <label>ChannelProgramLevelName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelProgramName__c</fullName>
        <description>ChannelProgramName</description>
        <externalDeveloperName>ChannelProgramName</externalDeveloperName>
        <label>ChannelProgramName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanStatus__c</fullName>
        <description>CleanStatus</description>
        <externalDeveloperName>CleanStatus</externalDeveloperName>
        <label>CleanStatus</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Opptys_c__c</fullName>
        <description>Closed_Lost_Opptys__c</description>
        <externalDeveloperName>Closed_Lost_Opptys__c</externalDeveloperName>
        <label>Closed_Lost_Opptys__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Opptys_c__c</fullName>
        <description>Closed_Won_Opptys__c</description>
        <externalDeveloperName>Closed_Won_Opptys__c</externalDeveloperName>
        <label>Closed_Won_Opptys__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Value_c__c</fullName>
        <description>Closed_Won_Value__c</description>
        <externalDeveloperName>Closed_Won_Value__c</externalDeveloperName>
        <label>Closed_Won_Value__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompareName__c</fullName>
        <description>CompareName</description>
        <externalDeveloperName>CompareName</externalDeveloperName>
        <label>CompareName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompareSite__c</fullName>
        <description>CompareSite</description>
        <externalDeveloperName>CompareSite</externalDeveloperName>
        <label>CompareSite</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Certifications_c__c</fullName>
        <description>Competitive_Certifications__c</description>
        <externalDeveloperName>Competitive_Certifications__c</externalDeveloperName>
        <label>Competitive_Certifications__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <description>ConnectionReceivedId</description>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>ConnectionReceivedId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <description>ConnectionSentId</description>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>ConnectionSentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Location_pc__c</fullName>
        <description>Contact_Location__pc</description>
        <externalDeveloperName>Contact_Location__pc</externalDeveloperName>
        <label>Contact_Location__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contract_Signed__c</description>
        <externalDeveloperName>Contract_Signed__c</externalDeveloperName>
        <label>Contract_Signed__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Name__c</fullName>
        <description>CreatedBy_Name</description>
        <externalDeveloperName>CreatedBy_Name</externalDeveloperName>
        <label>CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <description>CreatedDate__c</description>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>CreatedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Year_Revenue_Goal_c__c</fullName>
        <description>Current_Year_Revenue_Goal__c</description>
        <externalDeveloperName>Current_Year_Revenue_Goal__c</externalDeveloperName>
        <label>Current_Year_Revenue_Goal__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Target_c__c</fullName>
        <description>Current_Year_Target__c</description>
        <externalDeveloperName>Current_Year_Target__c</externalDeveloperName>
        <label>Current_Year_Target__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Contact_Date_pc__c</fullName>
        <description>Custom_Contact_Date__pc</description>
        <externalDeveloperName>Custom_Contact_Date__pc</externalDeveloperName>
        <label>Custom_Contact_Date__pc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPriority_c__c</fullName>
        <description>CustomerPriority__c</description>
        <externalDeveloperName>CustomerPriority__c</externalDeveloperName>
        <label>CustomerPriority__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_c__c</fullName>
        <description>Customer_Account__c</description>
        <externalDeveloperName>Customer_Account__c</externalDeveloperName>
        <label>Customer_Account__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Index_c__c</fullName>
        <description>Customer_Satisfaction_Index__c</description>
        <externalDeveloperName>Customer_Satisfaction_Index__c</externalDeveloperName>
        <label>Customer_Satisfaction_Index__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Value_c__c</fullName>
        <description>Customer_Value__c</description>
        <externalDeveloperName>Customer_Value__c</externalDeveloperName>
        <label>Customer_Value__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandbCompanyId__c</fullName>
        <description>DandbCompanyId</description>
        <externalDeveloperName>DandbCompanyId</externalDeveloperName>
        <label>DandbCompanyId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandbCompanyId_grax_xf_dandbcompany__c</fullName>
        <description>DandbCompanyId_grax_xf_dandbcompany</description>
        <externalDeveloperName>DandbCompanyId_grax_xf_dandbcompany</externalDeveloperName>
        <label>DandbCompanyId_grax_xf_dandbcompany</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandbCompany_Name__c</fullName>
        <description>DandbCompany_Name</description>
        <externalDeveloperName>DandbCompany_Name</externalDeveloperName>
        <label>DandbCompany_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Field_c__c</fullName>
        <description>Date_Time_Field__c</description>
        <externalDeveloperName>Date_Time_Field__c</externalDeveloperName>
        <label>Date_Time_Field__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Activity_c__c</fullName>
        <description>Days_Since_Activity__c</description>
        <externalDeveloperName>Days_Since_Activity__c</externalDeveloperName>
        <label>Days_Since_Activity__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity_pc__c</fullName>
        <description>Days_Since_Last_Activity__pc</description>
        <externalDeveloperName>Days_Since_Last_Activity__pc</externalDeveloperName>
        <label>Days_Since_Last_Activity__pc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Field_Entitlement_c__c</fullName>
        <description>Default_Field_Entitlement__c</description>
        <externalDeveloperName>Default_Field_Entitlement__c</externalDeveloperName>
        <label>Default_Field_Entitlement__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Field_Entitlement_c_grax_xf_enti__c</fullName>
        <description>Default_Field_Entitlement__c_grax_xf_entitlement</description>
        <externalDeveloperName>Default_Field_Entitlement__c_grax_xf_entitlement</externalDeveloperName>
        <label>Default_Field_Entitlement__c_grax_xf_ent</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Field_Entitlement_r_Name__c</fullName>
        <description>Default_Field_Entitlement__r_Name</description>
        <externalDeveloperName>Default_Field_Entitlement__r_Name</externalDeveloperName>
        <label>Default_Field_Entitlement__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Price_Book_c__c</fullName>
        <description>Default_Price_Book__c</description>
        <externalDeveloperName>Default_Price_Book__c</externalDeveloperName>
        <label>Default_Price_Book__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Price_Book_c_grax_xf_pricebook2__c</fullName>
        <description>Default_Price_Book__c_grax_xf_pricebook2</description>
        <externalDeveloperName>Default_Price_Book__c_grax_xf_pricebook2</externalDeveloperName>
        <label>Default_Price_Book__c_grax_xf_pricebook2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Price_Book_r_Name__c</fullName>
        <description>Default_Price_Book__r_Name</description>
        <externalDeveloperName>Default_Price_Book__r_Name</externalDeveloperName>
        <label>Default_Price_Book__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquency_Risk_Data_c__c</fullName>
        <description>Delinquency_Risk_Data__c</description>
        <externalDeveloperName>Delinquency_Risk_Data__c</externalDeveloperName>
        <label>Delinquency_Risk_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DunsNumber__c</fullName>
        <description>DunsNumber</description>
        <externalDeveloperName>DunsNumber</externalDeveloperName>
        <label>DunsNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_DB_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EDY_ORGCUSTOM__DB__c</description>
        <externalDeveloperName>EDY_ORGCUSTOM__DB__c</externalDeveloperName>
        <label>EDY_ORGCUSTOM__DB__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_DB_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EDY_ORGCUSTOM__DB__pc</description>
        <externalDeveloperName>EDY_ORGCUSTOM__DB__pc</externalDeveloperName>
        <label>EDY_ORGCUSTOM__DB__pc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_Old_Name_c__c</fullName>
        <description>EDY_ORGCUSTOM__Old_Name__c</description>
        <externalDeveloperName>EDY_ORGCUSTOM__Old_Name__c</externalDeveloperName>
        <label>EDY_ORGCUSTOM__Old_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_Old_Title_pc__c</fullName>
        <description>EDY_ORGCUSTOM__Old_Title__pc</description>
        <externalDeveloperName>EDY_ORGCUSTOM__Old_Title__pc</externalDeveloperName>
        <label>EDY_ORGCUSTOM__Old_Title__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Account_Insights_c__c</fullName>
        <description>Einstein_Account_Insights__c</description>
        <externalDeveloperName>Einstein_Account_Insights__c</externalDeveloperName>
        <label>Einstein_Account_Insights__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_Date_c__c</fullName>
        <description>Einstein_Article_1_Date__c</description>
        <externalDeveloperName>Einstein_Article_1_Date__c</externalDeveloperName>
        <label>Einstein_Article_1_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_Source_c__c</fullName>
        <description>Einstein_Article_1_Source__c</description>
        <externalDeveloperName>Einstein_Article_1_Source__c</externalDeveloperName>
        <label>Einstein_Article_1_Source__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_Title_c__c</fullName>
        <description>Einstein_Article_1_Title__c</description>
        <externalDeveloperName>Einstein_Article_1_Title__c</externalDeveloperName>
        <label>Einstein_Article_1_Title__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_URL_c__c</fullName>
        <description>Einstein_Article_1_URL__c</description>
        <externalDeveloperName>Einstein_Article_1_URL__c</externalDeveloperName>
        <label>Einstein_Article_1_URL__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_Date_c__c</fullName>
        <description>Einstein_Article_2_Date__c</description>
        <externalDeveloperName>Einstein_Article_2_Date__c</externalDeveloperName>
        <label>Einstein_Article_2_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_Source_c__c</fullName>
        <description>Einstein_Article_2_Source__c</description>
        <externalDeveloperName>Einstein_Article_2_Source__c</externalDeveloperName>
        <label>Einstein_Article_2_Source__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_Title_c__c</fullName>
        <description>Einstein_Article_2_Title__c</description>
        <externalDeveloperName>Einstein_Article_2_Title__c</externalDeveloperName>
        <label>Einstein_Article_2_Title__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_URL_c__c</fullName>
        <description>Einstein_Article_2_URL__c</description>
        <externalDeveloperName>Einstein_Article_2_URL__c</externalDeveloperName>
        <label>Einstein_Article_2_URL__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_Date_c__c</fullName>
        <description>Einstein_Article_3_Date__c</description>
        <externalDeveloperName>Einstein_Article_3_Date__c</externalDeveloperName>
        <label>Einstein_Article_3_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_Source_c__c</fullName>
        <description>Einstein_Article_3_Source__c</description>
        <externalDeveloperName>Einstein_Article_3_Source__c</externalDeveloperName>
        <label>Einstein_Article_3_Source__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_Title_c__c</fullName>
        <description>Einstein_Article_3_Title__c</description>
        <externalDeveloperName>Einstein_Article_3_Title__c</externalDeveloperName>
        <label>Einstein_Article_3_Title__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_URL_c__c</fullName>
        <description>Einstein_Article_3_URL__c</description>
        <externalDeveloperName>Einstein_Article_3_URL__c</externalDeveloperName>
        <label>Einstein_Article_3_URL__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <description>External_ID__c</description>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_pc__c</fullName>
        <description>External_ID__pc</description>
        <externalDeveloperName>External_ID__pc</externalDeveloperName>
        <label>External_ID__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Id_for_Identity_pc__c</fullName>
        <description>FB_Id_for_Identity__pc</description>
        <externalDeveloperName>FB_Id_for_Identity__pc</externalDeveloperName>
        <label>FB_Id_for_Identity__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Persona_ID_pc__c</fullName>
        <description>Facebook_Persona_ID__pc</description>
        <externalDeveloperName>Facebook_Persona_ID__pc</externalDeveloperName>
        <label>Facebook_Persona_ID__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Picture_pc__c</fullName>
        <description>Facebook_Picture__pc</description>
        <externalDeveloperName>Facebook_Picture__pc</externalDeveloperName>
        <label>Facebook_Picture__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Profile_Picture_pc__c</fullName>
        <description>Facebook_Profile_Picture__pc</description>
        <externalDeveloperName>Facebook_Profile_Picture__pc</externalDeveloperName>
        <label>Facebook_Profile_Picture__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>FirstName</description>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>FirstName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Business_Name_Data_c__c</fullName>
        <description>Global_Business_Name_Data__c</description>
        <externalDeveloperName>Global_Business_Name_Data__c</externalDeveloperName>
        <label>Global_Business_Name_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_D_U_N_S_Number_c__c</fullName>
        <description>Global_Ultimate_D_U_N_S_Number__c</description>
        <externalDeveloperName>Global_Ultimate_D_U_N_S_Number__c</externalDeveloperName>
        <label>Global_Ultimate_D_U_N_S_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Unique_ID_c__c</fullName>
        <description>Global_Unique_ID__c</description>
        <externalDeveloperName>Global_Unique_ID__c</externalDeveloperName>
        <label>Global_Unique_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Attainment_c__c</fullName>
        <description>Goal_Attainment__c</description>
        <externalDeveloperName>Goal_Attainment__c</externalDeveloperName>
        <label>Goal_Attainment__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry</description>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Formula_Field_c__c</fullName>
        <description>Initial_Formula_Field__c</description>
        <externalDeveloperName>Initial_Formula_Field__c</externalDeveloperName>
        <label>Initial_Formula_Field__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustomerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsCustomerPortal</description>
        <externalDeveloperName>IsCustomerPortal</externalDeveloperName>
        <label>IsCustomerPortal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExcludedFromRealign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsExcludedFromRealign</description>
        <externalDeveloperName>IsExcludedFromRealign</externalDeveloperName>
        <label>IsExcludedFromRealign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsPartner</description>
        <externalDeveloperName>IsPartner</externalDeveloperName>
        <label>IsPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsPersonAccount</description>
        <externalDeveloperName>IsPersonAccount</externalDeveloperName>
        <label>IsPersonAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawCompanyId__c</fullName>
        <description>JigsawCompanyId</description>
        <externalDeveloperName>JigsawCompanyId</externalDeveloperName>
        <label>JigsawCompanyId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <description>Jigsaw</description>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Jigsaw</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Klout_Score_pc__c</fullName>
        <description>Klout_Score__pc</description>
        <externalDeveloperName>Klout_Score__pc</externalDeveloperName>
        <label>Klout_Score__pc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>